# unity-mcp-harness

./: .gitignore  LICENSE  README.md  ask.py  build_goals.example.yaml  build_goals.yaml  build_workflow.py  chat.py  pyproject.toml  run_build.py  task_list.example.yaml  tasks.py  unity_common.py  unity_explore.py  unity_mcp_ask.py  unity_mcp_chat.py  unity_mcp_list_tools.py  unity_servers.json  unity_servers.stdio.example.json
config/: aicentral.yaml  harness_capabilities.marker  local.env.ps1  project.yaml  rate_limit_store.example.json  secret.yaml.example
core/: __init__.py  cli_entry.py  cli_extended.py  cli_plan.py  dialogue_config.py  goals_dialogue.py  harness_log.py  progress_hooks.py  task_list_merge.py  tasks_dialogue.py  tasks_run.py
core/mcp/: __init__.py  filtered_orchestrator.py  read_cache.py  server_lifecycle.py  tool_error_filter.py
core/pipeline/: __init__.py  blueprint_sync.py  bootstrap.py  context.py  execution.py  goals_writeback.py  plan_normalize.py  prepare.py  prompt_supplements.py  runner.py  (+5 more)
docs/: BUILD.md  CLI.md  EXE.md  EXECUTE.md  EXTERNAL_PROJECT.md  HARNESS.md  IvanMurzak-Unity-MCP.md  NOTE.md  PROJECT_STATE.md  README.md  TO_HARNESS.md  cursor-mcp.http.example.json  daemon.md
harness/: __init__.py  mcp_runner.py
scripts/: build_exe.ps1  finish_batch_unity.ps1  harness-goals-to-task-list.ps1  harness-replan.ps1  list-tools.ps1  start-unity-mcp-server.ps1  start_batch_unity.ps1  stop-unity.ps1
tests/: test_blueprint_sync.py  test_bootstrap.py  test_bootstrap_state.py  test_cli_entry.py  test_cli_execute12.py  test_cli_plan.py  test_context.py  test_goals_dialogue.py  test_harness_log.py  test_harness_prompt.py  test_init_workspace.py  test_mcp_runner.py  test_pipeline_store.py  test_plan_normalize.py  test_plan_normalize_writeback.py  test_project_state.py  test_project_state_sync.py  test_prompt_supplements.py  test_read_cache.py  test_run_build_json.py  test_runner.py  test_server_lifecycle.py  test_task_list_draft.py  test_task_list_merge.py  test_tasks.py  test_tasks_dialogue.py  test_tool_adapter.py  test_tool_error_filter.py  test_unity_common.py  test_unity_explore.py  test_verification.py  test_verify_hints.py  test_workflow.py  test_workspace_root.py
(+34 files in other folders)
