[project]
name = "unity-mcp-harness"
version = "0.2.1"
description = "Unity MCP Harness：藍圖驅動的 LangGraph 建構工作流（閉環感知/驗證、執行期 SSOT，LLM 經 aicentral）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aicentral[mcp]",
    "langgraph>=1.0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
# 入口使用唯一模組名（避免與 aicentral-chat 的 chat:main 衝突）
unity-mcp-chat = "unity_mcp_chat:main"
unity-mcp-ask = "unity_mcp_ask:main"
unity-mcp-list-tools = "unity_mcp_list_tools:main"
unity-mcp-harness = "run_build:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "unity_common",
    "unity_explore",
    "unity_mcp_chat",
    "unity_mcp_ask",
    "unity_mcp_list_tools",
    "tasks",
    "build_workflow",
    "run_build",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*", "core*"]

[tool.setuptools.package-data]
"core.scaffold" = ["templates/**/*"]

[tool.uv.sources]
aicentral = { path = "../aicentral", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
